--- a/2.数据类型/数据类型.md
+++ b/2.数据类型/数据类型.md
@@ -1,7 +1,11 @@
 1.数据类型分为：值类型和引用类型，值类型直接存储数据，引用类型存储数据的引用地址
-2.值类型：boolean(布尔)、uint（无符号整数类型）、int（有符号整数类型）、address（地址）、bytes32（字节）
-3.boolean:true或false
-4.uint：uint256(0 to 2**255 - 1)，uint8(0 to 2**8 - 1)，关键字 uint8 到 uint256 （无符号整型，从 8 位到 256 位）
-5.int：uint256(-2**255 to 2**255 - 1)，uint8(-2**8 to 2**8 - 1)，关键字 int8 到 int256 （无符号整型，从 8 位到 256 位）
-6.address：存储的是一个地址
-7.bytes32：是一种 固定长度的字节数组，占用 32 字节
+2.boolean布尔:true或false
+3.uint：uint256(0 to 2**255 - 1)，uint8(0 to 2**8 - 1)，关键字 uint8 到 uint256 （无符号整型，从 8 位到 256 位）
+4.int：uint256(-2**255 to 2**255 - 1)，uint8(-2**8 to 2**8 - 1)，关键字 int8 到 int256 （无符号整型，从 8 位到 256 位）
+5.address地址：存储的是一个地址
+6.bytes32字节：是一种 固定长度的字节数组，占用 32 字节
+7.string字符串:用于存储文本数据
+8.Array数组：存储的是集合数据结构
+9.struct结构体：存储的是自定义的复合数据类型
+10.mapping映射：键值对存储结构
+11.enum枚举：一一列举有限个数的常量
